[gd_scene load_steps=14 format=3 uid="uid://cmqd3ybuofds1"]

[ext_resource type="Script" path="res://scripts/pause.gd" id="1_332cs"]
[ext_resource type="Texture2D" uid="uid://ckv6bl83wglfd" path="res://assets/pause/tlopauzy.png" id="2_kd4m6"]
[ext_resource type="Texture2D" uid="uid://cmtjraf2nv4ue" path="res://assets/pause/pauza.png" id="3_ob1qx"]
[ext_resource type="Texture2D" uid="uid://defoclldtket5" path="res://assets/pause/back.png" id="4_2ptvm"]
[ext_resource type="Texture2D" uid="uid://3t5d2gk37nfk" path="res://assets/title/tlobuttonow.png" id="4_nk4w7"]
[ext_resource type="Texture2D" uid="uid://c60a8anbejjv0" path="res://assets/pause/hovback.png" id="5_0wbup"]
[ext_resource type="Texture2D" uid="uid://cn3v3q5u42ace" path="res://assets/title/trybobrot.png" id="5_4f885"]
[ext_resource type="Texture2D" uid="uid://7fru7gsydgbb" path="res://assets/pause/option.png" id="6_4a0jk"]
[ext_resource type="Texture2D" uid="uid://b5lqp142xbhs5" path="res://assets/pause/hovopcj.png" id="7_tfmp8"]
[ext_resource type="Texture2D" uid="uid://bpndcccv1kywg" path="res://assets/pause/out.png" id="8_6auon"]
[ext_resource type="Texture2D" uid="uid://beggaihwfsi4h" path="res://assets/pause/hovout.png" id="9_16vtw"]

[sub_resource type="Animation" id="Animation_qoxav"]
resource_name = "fade_out"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Fade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7ev00"]
_data = {
"fade_out": SubResource("Animation_qoxav")
}

[node name="Pause" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_332cs")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Bg" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_kd4m6")

[node name="Title" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -496.5
offset_top = -32.0
offset_right = 496.5
offset_bottom = 450.0
grow_horizontal = 2
texture = ExtResource("3_ob1qx")

[node name="ButtonBg" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -216.0
offset_top = -70.0
offset_right = 241.0
offset_bottom = 443.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_nk4w7")

[node name="TrybBack" type="Sprite2D" parent="Control"]
position = Vector2(756, 492)
texture = ExtResource("5_4f885")

[node name="Back" type="TextureButton" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -227.0
offset_top = -71.0
offset_right = 46.0
offset_bottom = 102.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("4_2ptvm")
texture_hover = ExtResource("5_0wbup")

[node name="TrybOptions" type="Sprite2D" parent="Control"]
position = Vector2(1261, 643)
scale = Vector2(0.873913, 0.873913)
texture = ExtResource("5_4f885")

[node name="Options" type="TextureButton" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 111.0
offset_top = 89.0
offset_right = 317.0
offset_bottom = 219.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("6_4a0jk")
texture_hover = ExtResource("7_tfmp8")

[node name="TrybExit" type="Sprite2D" parent="Control"]
position = Vector2(744, 943)
scale = Vector2(0.843478, 0.843478)
texture = ExtResource("5_4f885")

[node name="Exit" type="TextureButton" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -229.0
offset_top = 269.0
offset_right = 4.0
offset_bottom = 416.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("8_6auon")
texture_hover = ExtResource("9_16vtw")

[node name="Fade" type="ColorRect" parent="Control"]
process_mode = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7ev00")
}

[connection signal="mouse_entered" from="Control/Back" to="." method="_on_back_mouse_entered"]
[connection signal="mouse_exited" from="Control/Back" to="." method="_on_back_mouse_exited"]
[connection signal="pressed" from="Control/Back" to="." method="_on_back_pressed"]
[connection signal="mouse_entered" from="Control/Options" to="." method="_on_options_mouse_entered"]
[connection signal="mouse_exited" from="Control/Options" to="." method="_on_options_mouse_exited"]
[connection signal="pressed" from="Control/Options" to="." method="_on_options_pressed"]
[connection signal="mouse_entered" from="Control/Exit" to="." method="_on_exit_mouse_entered"]
[connection signal="mouse_exited" from="Control/Exit" to="." method="_on_exit_mouse_exited"]
[connection signal="pressed" from="Control/Exit" to="." method="_on_exit_pressed"]
